# bevy-inspector-egui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
bevy-inspector-egui-derive/: Cargo.toml
bevy-inspector-egui-derive/src/: attributes.rs  inspectable.rs  inspectable_enum.rs  inspectable_struct.rs  lib.rs  utils.rs
crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui-derive/src/: attributes.rs  lib.rs
crates/bevy-inspector-egui-derive/tests/: generic_options.rs  inspector_options.rs  reflect_ignore.rs
crates/bevy-inspector-egui/examples/: README.md  animated_transform.rs  cornell.rs  egui_dock.rs  inspector_options.rs  quick.rs  side_panel.rs  state.rs  texture.rs
crates/bevy-inspector-egui/examples/basic/: custom_type_ui.rs  inspector_options.rs  relationship_ui.rs  resource_inspector_manual.rs  world_inspector_manual.rs
crates/bevy-inspector-egui/examples/integrations/: egui_dock.rs  egui_tiles.rs  minibuffer.rs  side_panel.rs
crates/bevy-inspector-egui/examples/quick/: asset_inspector.rs  filter_query_inspector.rs  multiple_windows.rs  resource_inspector.rs  state_inspector.rs  world_inspector.rs  world_inspector_assets.rs  world_inspector_manual.rs  world_inspector_mouse_check.rs
crates/bevy-inspector-egui/src/: bevy_default_options.rs  dropdown.rs  egui_mouse_check.rs  egui_utils.rs  inspector_components.rs  lib.rs  minibuffer.rs  quick.rs  restricted_world_view.rs  split_world_permission.rs  utils.rs
crates/bevy-inspector-egui/src/bevy_ecs_inspector/: errors.rs  hierarchy.rs  mod.rs
crates/bevy-inspector-egui/src/bevy_inspector/: errors.rs  hierarchy.rs  mod.rs
crates/bevy-inspector-egui/src/driver_egui/: inspector_egui_overrides.rs  mod.rs
crates/bevy-inspector-egui/src/driver_egui/inspector_egui_impls/: image.rs  mod.rs  std_impls.rs
crates/bevy-inspector-egui/src/driver_egui/inspector_egui_impls/image/: image_texture_conversion.rs
crates/bevy-inspector-egui/src/driver_egui/inspector_egui_overrides/: image.rs  mod.rs  std_overrides.rs
crates/bevy-inspector-egui/src/egui_reflect_inspector/: errors.rs  mod.rs
crates/bevy-inspector-egui/src/inspector_egui_impls/: bevy_impls.rs  color.rs  glam_impls.rs  image.rs  mod.rs  std_impls.rs
crates/bevy-inspector-egui/src/inspector_egui_impls/image/: image_texture_conversion.rs
crates/bevy-inspector-egui/src/inspector_options/: default_options.rs  mod.rs  std_options.rs
crates/bevy-inspector-egui/src/minibuffer/: asset_inspector.rs  filter_query_inspector.rs  inspector_plugins.rs  mod.rs  resource_inspector.rs  state_inspector.rs  world_inspector.rs
crates/bevy-inspector-egui/src/options/: mod.rs  std_options.rs
crates/bevy-inspector-egui/src/reflect_inspector/: errors.rs  mod.rs
docs/: CHANGELOG.md  MIGRATION_GUIDE_0.15_0.16.md  index.html  publish.sh  wasm.js
docs/0.15-pre-release-announcement/: index.html
docs/demo/: wasm.js
examples/: README.md  all_features.rs  attributes.rs  button.rs  cornell.rs  demo.rs  entity.rs  enum.rs  hide_window.rs  inspectable_with_context.rs  inspector_query.rs  main.rs  mouse_picking.rs  mouse_picking.rs.disabled  multiple_inspectors.rs  new_egui_window.rs  planet_demo.rs  quaternion.rs  rapier.rs  rapier2d.rs  reflect.rs  reflected_ui.rs  resource_inspector.rs  rust_types.rs  setup_code.rs  texture.rs  transform.rs  tuples.rs  two_windows.rs  ui.rs  vec_as_dropdown.rs  with_context.rs  world.rs
integrations/: README.md
integrations/bevy-inspector-egui-rapier/: Cargo.toml  README.md
integrations/bevy-inspector-egui-rapier/examples/: rapier2d.rs  rapier3d.rs
integrations/bevy-inspector-egui-rapier/src/: lib.rs  macros.rs  rapier_impl.rs
src/: impls.rs  lib.rs  main.rs  plugin.rs  utils.rs  web.rs
src/impls/: bevy_core_pipeline.rs  bevy_impls.rs  bevy_input.rs  bevy_math.rs  bevy_pbr.rs  bevy_render.rs  bevy_sprite.rs  bevy_text.rs  bevy_ui.rs  hash.rs  list.rs  mod.rs  number.rs  primitives.rs  quat.rs  rapier.rs  std.rs  texture.rs  ui.rs  vec.rs  with_context.rs
src/impls/rapier/: mod.rs  nalgebra_conversions.rs  nalgebra_impls.rs  rapier2d_impls.rs  rapier_impls.rs
src/reflect/: mod.rs
src/utils/: image_texture_conversion.rs  macros.rs  mod.rs  sort_if.rs  ui.rs
src/widgets/: button.rs  mod.rs  new_window.rs  resource_inspector.rs
src/world_inspector/: impls.rs  inspectable_registry.rs  mod.rs  plugin.rs
tests/: attributes.rs  builtin_attributes.rs  generics.rs  generics_bound.rs  number_attributes.rs  optional.rs  simple_enum.rs  tuple_struct.rs  unit_struct.rs
