[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
egui = "0.34"
bevy_egui = { git = "https://github.com/taboky-dev/bevy_egui.git", rev = "0e4e717" }

[patch."crates-io"]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_color = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_derive = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_camera = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_mesh = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_light = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_shader = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_state = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_render = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_core_pipeline = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_pbr = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_picking = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_image = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_gizmos = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
bevy_winit = { git = "https://github.com/bevyengine/bevy.git", rev = "fb7f58b" }
