[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
egui = "0.34"
bevy_egui = { git = "https://github.com/taboky-dev/bevy_egui.git", rev = "a81559d" }

[patch."crates-io"]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_color = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_derive = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_camera = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_mesh = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_light = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_shader = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_state = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_render = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_core_pipeline = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_pbr = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_picking = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_image = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_gizmos = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
bevy_winit = { git = "https://github.com/bevyengine/bevy.git", rev = "7dda2bc" }
