[package]
name = "bevy-inspector-egui-derive"
version = "0.15.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Implementation detail of the `bevy-inspector-egui` crate"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui"


[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
