[package]
name = "bevy-inspector-egui-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
description = "Implementation detail of the `bevy-inspector-egui` crate"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
