[package]
name = "bevy-inspector-egui-derive"
version = "0.16.0-pre.2"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Implementation detail of the `bevy-inspector-egui` crate"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bevy_reflect = { version = "0.9", default-features = false }
bevy_math = { version = "0.9", default-features = false }
bevy-inspector-egui = { path = "../bevy-inspector-egui" }
