[package]
name = "bevy-inspector-egui"
version = "0.33.0"
edition = "2024"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = [
    "game-development",
    "gui",
    "visualization",
    "development-tools::procedural-macro-helpers",
]

[features]
default = [
    "documentation",
    "bevy_pbr",
    "bevy_image",
    "bevy_render",
    "bevy_core_pipeline",
    "egui_clipboard",
]
documentation = ["bevy_reflect/documentation"]
bevy_render = ["dep:bevy_render", "bevy_egui/render"]
bevy_core_pipeline = ["dep:bevy_core_pipeline"]
egui_clipboard = ["bevy_egui/manage_clipboard"]
egui_open_url = ["bevy_egui/open_url"]
highlight_changes = []

[package.metadata.docs.rs]
features = ["winit/x11"]

[dependencies]
winit = { version = "0.30.0", default-features = false }

bevy-inspector-egui-derive = { version = "0.33.0", path = "../bevy-inspector-egui-derive" }
bevy_app = { version = "0.16.0" }
bevy_asset = { version = "0.16.0" }
bevy_color = { version = "0.16.0" }
bevy_platform = { version = "0.16.0" }
#bevy_core = { version = "0.16.0" }
bevy_ecs = { version = "0.16.0" }
#bevy_hierarchy = { version = "0.16.0" }
bevy_log = { version = "0.16.0" }
bevy_math = { version = "0.16.0" }
bevy_reflect = { version = "0.16.0" }
bevy_state = { version = "0.16.0" }
bevy_time = { version = "0.16.0" }
bevy_utils = { version = "0.16.0" }
bevy_window = { version = "0.16.0" }

bevy_render = { version = "0.16.0", optional = true }
bevy_core_pipeline = { version = "0.16.0", optional = true }
bevy_pbr = { version = "0.16.0", optional = true }
bevy_image = { version = "0.16.0", optional = true }

egui = "0.32"

bevy_egui = { version = "0.36.0", default-features = false }

bytemuck = "1.16.0"
image = { version = "0.25", default-features = false }
smallvec = "1.10"

fuzzy-matcher = "0.3.7"
disqualified = "1.0.0"
uuid = "1.11.0"

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "std",
    "x11",
    "bevy_winit",
    "bevy_state",
    "bevy_window",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_core_pipeline",
    "bevy_picking",
    "animation",
    "png",
    "zstd",
    "tonemapping_luts",
    "ktx2",
] }
egui_dock = "0.17"
bevy_math = { version = "0.16.0", features = ["mint"] }
# transform-gizmo-egui = "0.6"
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "custom_type_ui"
path = "examples/basic/custom_type_ui.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"
