[package]
name = "bevy-inspector-egui"
version = "0.36.0"
edition = "2024"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = [
    "game-development",
    "gui",
    "visualization",
    "development-tools::procedural-macro-helpers",
]

[features]
default = [
    "documentation",
    "egui_clipboard",
    # Collections
    "2d",
    "3d",
]
common = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_image",
    "bevy_render",
]
2d = ["common"]
3d = ["bevy_light", "bevy_mesh", "bevy_pbr", "common"]

# Enable showing documentation on hover.
documentation = ["bevy_reflect/reflect_documentation"]

# Show inspector UI for bevy_mesh types
bevy_mesh = ["dep:bevy_mesh", "bevy_mesh/bevy_mikktspace"]
# Show inspector UI for bevy_render types
bevy_render = ["dep:bevy_render", "bevy_egui/render"]
# Show inspector UI for bevy_gizmos types
bevy_gizmos = ["dep:bevy_gizmos"]
# Show inspector UI for bevy_core_pipeline types
bevy_core_pipeline = ["dep:bevy_core_pipeline"]

egui_clipboard = ["bevy_egui/manage_clipboard"]
egui_open_url = ["bevy_egui/open_url"]

# Highlight changes to components in a different color.
highlight_changes = [] # this should ideally be runtime configurable.

[package.metadata.docs.rs]
features = ["winit/x11"]

[dependencies]
winit = { version = "0.30.0", default-features = false }

bevy-inspector-egui-derive = { version = "0.36", path = "../bevy-inspector-egui-derive" }
bevy_app = "0.18.0"
bevy_asset = "0.18.0"
bevy_color = "0.18.0"
bevy_platform = "0.18.0"
bevy_ecs = "0.18.0"
bevy_log = "0.18.0"
bevy_camera = "0.18.0"
bevy_math = "0.18.0"
bevy_reflect = "0.18.0"
bevy_state = "0.18.0"
bevy_time = "0.18.0"
bevy_utils = "0.18.0"
bevy_window = "0.18.0"

bevy_light = { version = "0.18.0", optional = true }
bevy_mesh = { version = "0.18.0", optional = true }
bevy_render = { version = "0.18.0", optional = true }
bevy_core_pipeline = { version = "0.18.0", optional = true }
bevy_pbr = { version = "0.18.0", optional = true }
bevy_image = { version = "0.18.0", optional = true }
bevy_gizmos = { version = "0.18.0", optional = true }

egui.workspace = true
bevy_egui = { version = "0.39", default-features = false }

bytemuck = "1.16.0"
image = { version = "0.25", default-features = false }
smallvec = "1.10"

fuzzy-matcher = "0.3.7"
disqualified = "1.0.0"
uuid = "1.11.0"
opener = "0.8.3"

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "std",
    "x11",
    "wayland",
    "reflect_auto_register",
    "bevy_log",
    "bevy_winit",
    "bevy_state",
    "bevy_window",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_text",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_gizmos",
    "mesh_picking",
    "gltf_animation",
    "png",
    "zstd_rust",
    "tonemapping_luts",
    "ktx2",
] }
bevy_math = { version = "0.18.0", features = ["mint"] }
egui_dock = { git = "https://github.com/Avarel/egui_dock", branch = "egui_0.33" }
transform-gizmo-bevy = { git = "https://github.com/taboky-dev/transform-gizmo", branch = "bevy-0.18" }
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "custom_type_ui"
path = "examples/basic/custom_type_ui.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "world_inspector_manual"
path = "examples/basic/world_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"
