[package]
edition = "2021"
name = "bevy-inspector-egui-rapier"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
version = "0.9.0"

categories = ["game-development", "gui", "visualization"]
description = "bevy-inspector-egui integration for rapier"
keywords = ["bevy", "inspector", "rapier", "physics"]
license = "MIT"
readme = "README.md"

[features]
rapier2d = ["bevy_rapier2d"]
rapier3d = ["bevy_rapier3d"]

[dependencies]
bevy = { version = "0.9", default-features = false }
bevy-inspector-egui = {version = "0.15", path = "../..", features = ["nalgebra031"]}
bevy_rapier2d = {version = "0.19", optional = true}
bevy_rapier3d = {version = "0.19", optional = true}

[dev-dependencies]
bevy = {version = "0.9", default-features = false, features = ["x11", "bevy_winit"]}

[[example]]
name = "rapier2d"
required-features = ["rapier2d"]

[[example]]
name = "rapier3d"
required-features = ["rapier3d"]

[package.metadata.docs.rs]
all-features = true
